name:                servant-pipes
version:             0.1.0.0
synopsis:            Streaming requests in Servant using Pipes
license:             BSD3
license-file:        LICENSE
author:              Luke Clifton
maintainer:          ltclifton@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.Pipes
                     , Servant.Pipes.Internal
                     , Servant.Pipes.Internal.Client
                     , Servant.Pipes.Csv
  build-depends:       base >=4.8 && <4.10
                     , bytestring
                     , cassava
                     , http-client
                     , http-media
                     , http-types
                     , mtl
                     , pipes
                     , pipes-bytestring
                     , pipes-csv
                     , pipes-safe
                     , servant
                     , servant-cassava
                     , servant-client
                     , servant-server
                     , wai
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-tabs -Werror
  default-language:    Haskell2010

-- A small demo of a streaming service
executable yes-serve
  hs-source-dirs:      yes-serve
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , cassava
                     , pipes
                     , servant
                     , servant-server
                     , servant-pipes
                     , wai
                     , warp
                     , vector

benchmark bench-servant-pipes
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -fno-warn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , async
                     , criterion
                     , pipes
                     , servant-pipes
